--- a/AMimir/.gitignore
+++ b/AMimir/.gitignore
@@ -70,3 +70,9 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+/.idea/
+google-services.json
+google-services.json.meta
+google-services-desktop.json
+google-services-desktop.json.meta
