--- a/AMimir/Packages/manifest.json
+++ b/AMimir/Packages/manifest.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
+    "com.google.external-dependency-manager": "git+https://github.com/GameWorkstore/com.google.external-dependency-manager.git#1.2.180",
+    "com.google.firebase.app": "git+https://github.com/GameWorkstore/com.google.firebase.app.git#12.1.0",
+    "com.google.firebase.analytics": "git+https://github.com/GameWorkstore/com.google.firebase.analytics.git#12.1.0",
+    "com.google.firebase.crashlytics": "git+https://github.com/GameWorkstore/com.google.firebase.crashlytics.git#12.1.0",
     "com.unity.collab-proxy": "2.0.7",
     "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.rider": "3.0.24",
     "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.recorder": "4.0.2",
     "com.unity.test-framework": "1.1.33",
