Add initial version for review request

--- a/AMimir/Assets/Plugins/Android/mainTemplate.gradle
+++ b/AMimir/Assets/Plugins/Android/mainTemplate.gradle
@@ -6,6 +6,8 @@ dependencies {
     
 // Android Resolver Dependencies Start
     implementation 'com.google.android.gms:play-services-base:18.5.0' // Packages/com.google.firebase.app/Firebase/Editor/AppDependencies.xml:17
+    implementation 'com.google.android.play:core-common:2.0.0' // Packages/com.google.play.core/Editor/Dependencies.xml:3
+    implementation 'com.google.android.play:review:2.0.0' // Packages/com.google.play.review/Editor/Dependencies.xml:3
     implementation 'com.google.firebase:firebase-analytics:22.0.2' // Packages/com.google.firebase.analytics/Firebase/Editor/AnalyticsDependencies.xml:13
     implementation 'com.google.firebase:firebase-analytics-unity:12.1.0' // Packages/com.google.firebase.analytics/Firebase/Editor/AnalyticsDependencies.xml:18
     implementation 'com.google.firebase:firebase-app-unity:12.1.0' // Packages/com.google.firebase.app/Firebase/Editor/AppDependencies.xml:22
