--- a/AMimir/Packages/manifest.json
+++ b/AMimir/Packages/manifest.json
@@ -4,6 +4,9 @@
     "com.google.firebase.analytics": "git+https://github.com/GameWorkstore/com.google.firebase.analytics.git#12.1.0",
     "com.google.firebase.app": "git+https://github.com/GameWorkstore/com.google.firebase.app.git#12.1.0",
     "com.google.firebase.crashlytics": "git+https://github.com/GameWorkstore/com.google.firebase.crashlytics.git#12.1.0",
+    "com.google.play.review": "git+https://github.com/GameWorkstore/com.google.play.review#1.8.1",
+    "com.google.play.common": "git+https://github.com/GameWorkstore/com.google.play.common#1.9.0",
+    "com.google.play.core": "git+https://github.com/GameWorkstore/com.google.play.core#1.8.3",
     "com.unity.burst": "1.8.16",
     "com.unity.collab-proxy": "2.0.7",
     "com.unity.device-simulator.devices": "1.0.0",
